Bug 99124 - memory leaks
Summary: memory leaks
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: tp-farstream (show other bugs)
Version: git master
Hardware: Other All
: medium normal
Assignee: Olivier Crête
QA Contact: Telepathy bugs list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-12-17 12:23 UTC by Fabrice Bellet
Modified: 2016-12-18 16:27 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
fix a couple of memory leaks (2.64 KB, patch)
2016-12-17 12:23 UTC, Fabrice Bellet
Details | Splinter Review
call-content: fix a memory leak (881 bytes, patch)
2016-12-17 12:24 UTC, Fabrice Bellet
Details | Splinter Review
call-content: fix another memory leak (1.19 KB, patch)
2016-12-17 12:25 UTC, Fabrice Bellet
Details | Splinter Review

Description Fabrice Bellet 2016-12-17 12:23:45 UTC
Created attachment 128520 [details] [review]
fix a couple of memory leaks

Hi!

Theses patches fix memory leaks detected by valgrind.
Comment 1 Fabrice Bellet 2016-12-17 12:24:23 UTC
Created attachment 128521 [details] [review]
call-content: fix a memory leak
Comment 2 Fabrice Bellet 2016-12-17 12:25:02 UTC
Created attachment 128522 [details] [review]
call-content: fix another memory leak
Comment 3 Olivier Crête 2016-12-18 16:27:32 UTC
Merged:

commit cd5910078b9d8f46fa411c093895d5f73432779b
Author: Fabrice Bellet <fabrice@bellet.info>
Date:   Thu Dec 15 11:26:47 2016 +0100

    call-content: fix another memory leak
    
    https://bugs.freedesktop.org/show_bug.cgi?id=99124

commit 4ecc6a3638f8ea1195a185f7b398777a384de018
Author: Olivier Crête <olivier.crete@collabora.com>
Date:   Sun Dec 18 11:26:47 2016 -0500

    Bump dep to telepathy-glib 0.24

commit 0c9570ebacb7cead9bdb2a887d210aaf6db02a8e
Author: Fabrice Bellet <fabrice@bellet.info>
Date:   Sun Dec 11 19:18:07 2016 +0100

    call-content: fix a memory leak
    
    https://bugs.freedesktop.org/show_bug.cgi?id=99124

commit 93380c723f999ee9d387cbf2de08dbf12e908fec
Author: Fabrice Bellet <fabrice@bellet.info>
Date:   Mon Jul 18 14:30:48 2016 +0200

    fix a couple of memory leaks
    
    https://bugs.freedesktop.org/show_bug.cgi?id=99124


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.