fix a couple of memory leaks

https://bugs.freedesktop.org/show_bug.cgi?id=99124